syntax="proto3";

import "google/protobuf/timestamp.proto";

package NUgc.NSchema;

message TOrgChatReview {
    string ChatId = 1;
    string ReviewText = 2;
    uint32 Rating = 3;
    google.protobuf.Timestamp CreateTime = 4;
}
